# re-mocd

./: .gitignore  CONVENTIONS.md  Cargo.toml  Makefile  PYPY.py  README.md  benchmark.csv  best_partition.json  comparisons.ipynb  comparisons.py  generations_data.csv  netlify.toml  output.edgelist  publish.sh  pyproject.toml  requirements.sh  test.edgelist
.github/workflows/: python-publish.yml  release.yml
.old/: requirements.txt
.old/src/: genetic_algorithm.py  main.py  temp  utils.py
config/_default/: params.toml
content/: _index.md
content/docs/: _index.md
docs/: propose.tex
experiments/: experiment.py  fvic.py  nmi.py
include/: ga.h  graph.h  gui.h  template.h
mocd-03c768fbfe3ac204e064d3247ec6bcf3c0507d3f/.old/: README.md
mocd-03c768fbfe3ac204e064d3247ec6bcf3c0507d3f/src/: consts.rs  helper.rs
python/: generations_data.csv
python/src/: .txt  genetic_algorithm.py  genetic_operators.py  main.py  plots.py  temp
res/: comparisons.py  example.py  notes  requirements.txt
res/graphs/: generate.py
rust/: .gitignore  Cargo.toml  generations_data.csv
rust/src/: genetic_algorithm.rs  main.rs  mu-005.edgelist  settings.rs
src/: algorithm.rs  args.rs  consts.rs  drawers.rs  graph.c  graph.rs  graphs.rs  gui.c  helper.rs  lib.rs  main.c  main.rs  modularity.rs  operators.rs  pesa_ii.rs
src/algorithms/: algorithm.rs  mod.rs  nsga_ii.rs  pesa_ii.rs  rmocd.rs
src/graph/: mod.rs
src/graphHandler/: graphs.rs  modularity.rs
src/nsga/: algorithm.rs  core.rs  individual.rs  mod.rs
src/operators/: crossover.rs  ga.rs  metrics.rs  mod.rs  modularity.rs  mutation.rs  selection.rs
src/pesa/: algorithm.rs  evolutionary.rs  mod.rs  model_selection.rs
tests/: fvic.py
(+75 files in other folders)
