[package]
name = "mocd" 
version = "0.1.0" 
edition = "2021"
authors = ["Guilherme Santos"] #
license = "GPL-3.0-or-later"

[profile.release]
debug = true 

[dependencies]
rand = "0.8"            # random number generation.
rayon = "1.7"           # data parallelism and multi-threading support.
rustc-hash = { version = "2.1", default-features = true } # a fast hash map implementation.
serde_json = "1.0.0"    # serializing and deserializing JSON data.
crossbeam = "0.8"
